Added invalid fielding position exception

--- a/src/CricketTeams.Domain/CricketTeams.Domain/CricketTeams.Domain.csproj
+++ b/src/CricketTeams.Domain/CricketTeams.Domain/CricketTeams.Domain.csproj
@@ -6,4 +6,8 @@
 	  <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Models\Matches\Over.cs~RF385b2751.TMP" />
+  </ItemGroup>
+
 </Project>
