--- a/src/CricketTeams.Domain/CricketTeams.Domain/CricketTeams.Domain.csproj
+++ b/src/CricketTeams.Domain/CricketTeams.Domain/CricketTeams.Domain.csproj
@@ -1,9 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp5</TargetFramework>
-	  <Nullable>enable</Nullable>
-	  <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-  </PropertyGroup>
-	
+	<PropertyGroup>
+		<TargetFramework>netcoreapp5</TargetFramework>
+		<Nullable>enable</Nullable>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<Compile Remove="**\*.Specs.cs" />
+		<Compile Remove="**\*.Fakes.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)' != 'Release'">
+		<PackageReference Include="FakeItEasy" Version="7.0.0" />
+		<PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="6.1.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.3" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Bogus" Version="33.0.2" />
+	</ItemGroup>
 </Project>
