--- a/src/CricketTeams.Domain/CricketTeams.Infrastructure/CricketTeams.Infrastructure.csproj
+++ b/src/CricketTeams.Domain/CricketTeams.Infrastructure/CricketTeams.Infrastructure.csproj
@@ -8,11 +8,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Domain.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
