--- a/src/CricketTeams.Startup/CricketTeams.Startup.csproj
+++ b/src/CricketTeams.Startup/CricketTeams.Startup.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	  <LangVersion>8.0</LangVersion>
+	  <Nullable>enable</Nullable>
+	  <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Web\CricketTeams.Web.csproj" />
   </ItemGroup>
 
 </Project>
