Added Infrastructure configuration

--- a/src/CricketTeams.Startup/CricketTeams.Startup.csproj
+++ b/src/CricketTeams.Startup/CricketTeams.Startup.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Infrastructure\CricketTeams.Infrastructure.csproj" />
     <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Web\CricketTeams.Web.csproj" />
   </ItemGroup>
 
