--- a/src/CricketTeams.Domain/CricketTeams.Infrastructure/CricketTeams.Infrastructure.csproj
+++ b/src/CricketTeams.Domain/CricketTeams.Infrastructure/CricketTeams.Infrastructure.csproj
@@ -8,11 +8,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
