--- a/src/CricketTeams.Startup/appsettings.json
+++ b/src/CricketTeams.Startup/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=CricketTeams; Integrated Security=True; Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
