Registered Data repository and implemented Players controller.

--- a/src/CricketTeams.Web/CricketTeams.Web.csproj
+++ b/src/CricketTeams.Web/CricketTeams.Web.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\CricketTeams.Domain\CricketTeams.Domain.csproj" />
+	  <ProjectReference Include="..\CricketTeams.Application\CricketTeams.Application.csproj" />
 	</ItemGroup>
 
 </Project>
